--- a/db-schema-create-demo/pom.xml
+++ b/db-schema-create-demo/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>top.vchar</groupId>
         <artifactId>activiti-demo</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <artifactId>db-schema-create-demo</artifactId>
